# ImageContainer

./: README.md  pyproject.toml  requirements.txt
src/image_container/: README.md  __init__.py  ch_order.py  container.py  extention.py  format.py  iterator.py  types.py
src/image_container/binary_image/: connected_components.py  container.py
src/image_container/containers/array/: README.md  __init__.py  container.py  protocol.py
src/image_container/containers/array/mixin/: README.md  __init__.py  convert.py  filter.py  geometry.py  hash.py  process.py  stats.py
src/image_container/containers/array/protocols/: README.md  __init__.py  geometry.py  hash.py  process.py
src/image_container/containers/pil/: __init__.py  container.py  protocol.py
src/image_container/containers/pil/mixin/: __init__.py  convert.py  geometry.py  stats.py
src/image_container/dct_image/: README.md  __init__.py  base.py  container.py
src/image_container/dct_image/container/: README.md  __init__.py  blocked.py  non_blocked.py
src/image_container/dct_image/utils/: README.md  block_transform.py  dct_matrix.py
src/image_container/utils/: README.md  __init__.py  padding.py
tests/: conftest.py  test_array_container.py  test_binary_image.py  test_ch_order.py  test_dct_image.py  test_extention.py  test_format.py  test_image_container.py  test_iterator.py  test_padding.py  test_pil_container.py
